# quoridouble-portfolio

./: .gitignore  LICENSE  readme.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: commit-message-check.yml  flutter_build.yml
app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle
app/assets/lotties/: splash.json
app/assets/translations/: en-US.json  ja-JP.json  ko-KR.json  ru-RU.json  zh-CN.json
app/ios/: libgamecore.dylib
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/screens/: ai_screen.dart  home_screen.dart  pvp_screen.dart  splash_screen.dart
app/lib/utils/: dfs.dart  game_state.dart  socket_service.dart
app/lib/widgets/: show_info.dart  show_language_dialog.dart
app/lib/widgets/ai_widgets/: game_pause_dialog.dart  game_result_dialog.dart  show_game_setup_dialog.dart
app/lib/widgets/pvp_widgets/: game_pause_dialog.dart  game_result_dialog.dart  match_dialog.dart  show_network_dialog.dart
app/linux/: CMakeLists.txt  my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
be/: .gitignore  build.gradle.kts  envs.sh  readme.md  settings.gradle.kts
be/src/main/resources/: application-dev.properties  application-local.properties  application-prod.properties  (+2 more)
rl-engine/: .clang-format  .clangd  .gitignore  CMakeLists.txt  run.sh
(+12 files in other folders)
